Small screens: Getting Started page: fix layout, spacing, labels. (#174)

--- a/gobotany/static/sass/styles.scss
+++ b/gobotany/static/sass/styles.scss
@@ -3210,6 +3210,9 @@ $tooltip-arrow-rotation: 225deg;
     #sidebar .section .get-help-btn, #sidebar .section .view-map-btn {
         margin-bottom: 0;
     }
+    #sidebar .section.separate p {
+        clear: left;
+    }
     .app #main {
         margin-bottom: 14px;
     }
@@ -3296,6 +3299,18 @@ $tooltip-arrow-rotation: 225deg;
         margin-bottom: $smallscreen-side-margin;
         margin-left: $smallscreen-side-margin;
         margin-right: $smallscreen-side-margin;
+    }
+    #getting-started .question, #getting-started .first.question,
+    #getting-started .sixth.question {
+        margin-left: $smallscreen-side-margin;
+        margin-right: $smallscreen-side-margin;
+    }
+    #getting-started a.screenshot img.screenshot-thumb {
+        margin: 10px 0 0;
+    }
+    #getting-started a.onward-btn {
+        float: none;
+        margin: 0 auto 20px;
     }
     #glossary header h1 {
         width: auto;
